[package]
name = "rivelin_actors"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros", "test-util"] }
tokio-test = "0.4.4"
futures-util = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }

[package.metadata.cargo-shear]
ignored = ["tokio-test"]
